[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdrap_std_lib"
version = "0.1.0"
authors = [{ name = "Samuel Drapeau", email = "samuel.drapeau@gmail.com" }]
description = "A standard library of imports and configurations for personal Python projects."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "numpy", 
    "pandas", 
    "plotly", 
    "tqdm", 
    "kaleido", 
    "rich", 
]

[project.urls]
"Homepage" = "https://github.com/sdrap/sdrap_std_lib_project"

